# gpu_cpu_math_comparison

./: .gitignore  CMakeLists.txt  README.md  setup
cmake/: ConfigArchitecture.cmake  ConfigDocumentation.cmake  ConfigExternal.cmake  ConfigGPU.cmake  ConfigInfo.cmake  ConfigOMP.cmake  ConfigPackaging.cmake  ConfigPamadm.cmake  ConfigParentSettings.cmake  ConfigTesting.cmake  ConfigVersion.cmake  Motivation.cmake  SetPythonHintVariables.cmake
cmake/binary-info/: BinaryInfo.cmake  binary_info.py.in
cmake/compilers/: CFlags.cmake  CXXFlags.cmake  ConfigCompilerFlags.cmake  ConfigXHostFlag.cmake  FindCompilerVersion.cmake  FortranFlags.cmake
cmake/testing/: ConfigUnitTesting.cmake  unit-test-gather.py  unit-test-wrap.py
cmake/testing/autogenerated/: .gitignore
src/: fortr_timing.F90  gpu_routines.c  gpu_stuff.F90  main.F90  utils.F90
